k8s/get-url-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get-url-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: get
  template:
    metadata:
      labels:
        component: get
    spec:
      containers:
        - name: get-url
          image: shaibad/multi-shorten-url
          ports:
            - containerPort: 8080
