k8s/shorten-url-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shorten-url-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: shorten
  template:
    metadata:
      labels:
        component: shorten
    spec:
      containers:
        - name: shorten-url
          image: shaibad/multi-shorten-url
          ports:
            - containerPort: 5000
