k8s/shorten-url-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shorten-url-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: shorten
  ports:
    - port: 5000
      targetPort: 5000
